<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grasp_plugin</name>
  <version>0.0.1</version>
  <description>Grasp plugin for gazebo ignition</description>
  <maintainer email="a.j.vanhilten@tudelft.nl">Arend-Jan van Hilten</maintainer>
  <license>Apache 2.0</license>
  <author>Arend-Jan van Hilten</author>
  <author>David Gutierrez</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros_gz_example_description</depend>
  <!-- dunno -->
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

